--- a/app/src/main/res/layout/activity_homescreen.xml
+++ b/app/src/main/res/layout/activity_homescreen.xml
@@ -22,7 +22,7 @@
         android:layout_height="77dp"
         app:srcCompat="@drawable/leaf"
         android:id="@+id/imageView2"
-        android:layout_gravity="right"
+        android:layout_gravity="end"
         android:background="@color/colorAccent"
          />
 
@@ -33,9 +33,9 @@
         android:id="@+id/textView2"
         android:textSize="30sp"
         android:textScaleX="2"
-        android:gravity="left|center"
+        android:gravity="start|center"
         android:elevation="1dp"
-        android:textColor="#361363"
+        android:textColor="#aaaf"
         android:textStyle="normal|bold"
         android:background="@color/colorAccent"
          />
@@ -44,8 +44,8 @@
     <TextView
         android:text="@string/main_page"
         android:layout_width="match_parent"
-        android:layout_height="44dp"
-        android:gravity="left|center"
+        android:layout_height="wrap_content"
+        android:gravity="start|center"
         android:id="@+id/textView5"
         android:layout_weight="7.88"
         android:textStyle="normal"
@@ -53,6 +53,7 @@
         android:background="@color/colorPrimary"
         android:textColor="#ffff"
         android:paddingStart="10dp"
+        android:paddingEnd="2dp"
         android:paddingTop="10dp"
         android:paddingBottom="8dp"/>
 
