--- a/app/src/main/res/layout/activity_add_new_field.xml
+++ b/app/src/main/res/layout/activity_add_new_field.xml
@@ -10,7 +10,7 @@
             android:text="@string/fieldname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:id="@+id/textView"
             android:layout_weight="1"
             android:textStyle="bold"/>
