--- a/app/src/main/res/layout/activity_add_new_field.xml
+++ b/app/src/main/res/layout/activity_add_new_field.xml
@@ -5,7 +5,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:id="@+id/ll12">
         <TextView
             android:text="@string/fieldname"
             android:layout_width="wrap_content"
@@ -18,12 +19,47 @@
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:hint="Name"
+            android:inputType="textPersonName|textCapWords"
+            android:hint="@string/username"
             android:ems="10"
             android:id="@+id/editText"
             android:layout_weight="1"
-            android:text="@string/userfieldname"/>
+            android:text="@string/userfieldname"
+            android:hapticFeedbackEnabled="true"
+            />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/ll12"
+        android:paddingTop="10dp">
+
+        <TextView
+            android:text="@string/Area"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView15"
+            android:layout_weight="0.56"
+            android:textSize="20sp"
+            android:textStyle="bold"/>
+
+        <EditText
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:ems="10"
+            android:id="@+id/editText1"
+            android:labelFor="@+id/editText1" />
+
+        <Spinner
+            android:layout_width="84dp"
+            android:layout_height="match_parent"
+            android:id="@+id/spinner2"
+            android:entries="@array/landMeasurementFigures"/>
+
 
     </LinearLayout>
 
