--- a/app/src/main/res/layout/activity_homescreen.xml
+++ b/app/src/main/res/layout/activity_homescreen.xml
@@ -10,7 +10,7 @@
     android:paddingEnd="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="com.example.sagar.ahs.MainActivity"
+    tools:context="com.example.sagar.ahs.homescreenjava"
     android:weightSum="1">
 
     <LinearLayout
@@ -111,5 +111,18 @@
             android:background="@color/colorPrimary"
             android:gravity="fill"/>
     </LinearLayout>
+
+
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+android:divider="@color/colorPrimary"
+        android:dividerHeight="3dp"
+        android:id="@+id/list_view"
+
+        />
+
+
 
 </LinearLayout>
