--- a/app/src/main/res/layout/activity_addition1.xml
+++ b/app/src/main/res/layout/activity_addition1.xml
@@ -26,7 +26,7 @@
 
             android:id="@+id/textView16"
             android:background="@color/colorPrimary"
-            android:textSize="20sp"
+            android:textSize="15sp"
             android:textStyle="bold"
             android:layout_weight="1" />
 
@@ -34,21 +34,31 @@
 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
+            android:paddingStart="10dp"
             android:id="@+id/textView17"
             android:background="@color/colorPrimary"
-            android:textSize="20sp"
+            android:textSize="15sp"
             android:textStyle="bold"
             android:layout_weight="1" />
 
         <TextView
-            android:text="@string/DTH"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/textView23"
+            android:layout_weight="1"
+            android:textSize="15sp"
+            android:background="@color/colorPrimary"
+            android:textStyle="bold"
+            />
 
+        <TextView
+            android:text="@string/cropgrown"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingStart="10dp"
             android:id="@+id/textView18"
             android:background="@color/colorPrimary"
-            android:textSize="20sp"
+            android:textSize="15sp"
             android:textStyle="bold"
             android:layout_weight="1" />
 
@@ -59,54 +69,66 @@
 
             android:id="@+id/textView19"
             android:background="@color/colorPrimary"
-            android:textSize="25sp"
+            android:textSize="15sp"
             android:textStyle="bold"
             android:layout_weight="1" />
     </LinearLayout>
+
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        >
+
+        android:weightSum="3">
 
         <ImageButton
             android:layout_width="128dp"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/hay"
-            android:id="@+id/imageButton5"
-            android:background="@color/colorPrimary"/>
+            android:id="@+id/imageButton54"
+            android:background="@color/colorAccent"
+            android:layout_weight="1"
+            />
 
         <ImageButton
-            android:layout_width="130dp"
+            android:layout_width="118dp"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/field"
-            android:id="@+id/imageButton4"
-            android:background="@color/colorPrimary"/>
+            android:id="@+id/imageButton55"
+            android:background="@color/colorPrimary"
+            android:onClick="movetosecond"
+            android:layout_weight="1"
+            android:tint="#ffff"/>
 
         <ImageButton
-            android:layout_width="108dp"
+            android:layout_width="111dp"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/videoediting"
-            android:id="@+id/imageButton6"
-            android:background="@color/colorPrimary"/>
+            android:id="@+id/imageButton56"
+            android:background="@color/colorPrimary"
+            android:onClick="movetothird"
+            android:layout_weight="1"
+            android:tint="#ffff"/>
 
     </LinearLayout>
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:weightSum="3">
 
         <TextView
             android:text="@string/best_crop"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textView20"
-            android:layout_weight="1.21"
-            android:background="@color/colorPrimary"
+            android:layout_weight="1.85"
+            android:background="@color/colorAccent"
             android:textStyle="bold"
-            android:gravity="center"/>
+            android:gravity="center"
+            />
 
         <TextView
             android:text="@string/currentsituaation"
@@ -114,7 +136,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/textView21"
             android:gravity="center"
-            android:layout_weight="1.32"
+            android:layout_weight="0.85"
             android:background="@color/colorPrimary"
             android:textStyle="bold"/>
 
@@ -124,7 +146,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/textView22"
             android:gravity="center"
-            android:layout_weight="0.70"
+            android:layout_weight="1"
             android:background="@color/colorPrimary"
             android:textStyle="bold"/>
     </LinearLayout>
