--- a/app/src/main/res/layout/activity_addition2.xml
+++ b/app/src/main/res/layout/activity_addition2.xml
@@ -21,44 +21,53 @@
         <TextView
 
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
 
             android:id="@+id/textView88"
             android:background="@color/colorPrimary"
-            android:textSize="20sp"
+            android:textSize="15sp"
             android:textStyle="bold"
             android:layout_weight="1" />
 
         <TextView
 
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
+            android:layout_height="match_parent"
+            android:paddingStart="10dp"
             android:id="@+id/textView89"
             android:background="@color/colorPrimary"
-            android:textSize="20sp"
+            android:textSize="15sp"
             android:textStyle="bold"
             android:layout_weight="1" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:id="@+id/textView99"
+            android:layout_weight="1"
+            android:textSize="15sp"
+            android:background="@color/colorPrimary"
+            android:textStyle="bold"
+            />
 
         <TextView
-            android:text="@string/DTH"
+            android:text="@string/cropgrown"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
+            android:layout_height="match_parent"
+            android:paddingStart="10dp"
             android:id="@+id/textView90"
             android:background="@color/colorPrimary"
-            android:textSize="20sp"
+            android:textSize="15sp"
             android:textStyle="bold"
             android:layout_weight="1" />
 
         <TextView
 
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
+            android:layout_height="match_parent"
+            android:paddingStart="10dp"
             android:id="@+id/textView19"
             android:background="@color/colorPrimary"
-            android:textSize="25sp"
+            android:textSize="15sp"
             android:textStyle="bold"
             android:layout_weight="1" />
     </LinearLayout>
@@ -67,66 +76,72 @@
         android:orientation="horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        >
+
+        android:weightSum="3">
 
         <ImageButton
             android:layout_width="128dp"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/hay"
-            android:id="@+id/imageButton91"
-            android:background="@color/colorPrimary"/>
+            android:id="@+id/imageButton54"
+            android:background="@color/colorPrimary"
+            android:onClick="movetofirst"
+            android:layout_weight="1"
+            android:tint="#ffff"/>
 
         <ImageButton
-            android:layout_width="130dp"
+            android:layout_width="118dp"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/field"
-            android:id="@+id/imageButton92"
-            android:background="@color/colorPrimary"/>
+            android:id="@+id/imageButton55"
+            android:background="@color/colorAccent"
+            android:layout_weight="1"
+            />
 
         <ImageButton
-            android:layout_width="108dp"
+            android:layout_width="111dp"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/videoediting"
-            android:id="@+id/imageButton93"
-            android:background="@color/colorPrimary"/>
+            android:id="@+id/imageButton56"
+            android:background="@color/colorPrimary"
+            android:onClick="movetothird"
+            android:layout_weight="1"
+            android:tint="#ffff"/>
 
     </LinearLayout>
 
     <LinearLayout
         android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:weightSum="3">
 
         <TextView
             android:text="@string/best_crop"
-            android:layout_width="wrap_content"
+            android:layout_width="128dp"
             android:layout_height="wrap_content"
-            android:id="@+id/textView203"
-            android:layout_weight="1.21"
+            android:id="@+id/textView20"
             android:background="@color/colorPrimary"
             android:textStyle="bold"
             android:gravity="center"/>
 
         <TextView
             android:text="@string/currentsituaation"
-            android:layout_width="wrap_content"
+            android:layout_width="117dp"
             android:layout_height="wrap_content"
             android:id="@+id/textView21"
             android:gravity="center"
-            android:layout_weight="1.32"
-            android:background="@color/colorPrimary"
+            android:background="@color/colorAccent"
             android:textStyle="bold"/>
 
         <TextView
             android:text="@string/procedure"
-            android:layout_width="wrap_content"
+            android:layout_width="116dp"
             android:layout_height="wrap_content"
             android:id="@+id/textView22"
             android:gravity="center"
-            android:layout_weight="0.70"
             android:background="@color/colorPrimary"
             android:textStyle="bold"/>
     </LinearLayout>
-
 
 </LinearLayout>
