--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#0c7333</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#dce3de</color>
+    <color name="colorPrimary">#0c6b30</color>
+    <color name="colorPrimaryDark">#eff2f9</color>
+    <color name="colorAccent">#4bf17a</color>
 </resources>
