--- a/app/src/main/res/layout/activity_addition1.xml
+++ b/app/src/main/res/layout/activity_addition1.xml
@@ -72,6 +72,27 @@
             android:textSize="15sp"
             android:textStyle="bold"
             android:layout_weight="1" />
+        <TextView
+
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:paddingStart="10dp"
+
+            android:text="@string/DTH"
+            android:background="@color/colorPrimary"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            android:layout_weight="1" />
+        <TextView
+
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+
+            android:id="@+id/tv122"
+            android:background="@color/colorPrimary"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            android:layout_weight="1" />
     </LinearLayout>
 
 
