--- a/app/src/main/res/layout/activity_add_new_field.xml
+++ b/app/src/main/res/layout/activity_add_new_field.xml
@@ -71,7 +71,7 @@
         android:background="@color/colorPrimary"
         android:layout_gravity="center"
         android:layout_marginTop="167dp"
-
+        android:textColor="#ffff"
         android:layout_centerHorizontal="true"
         android:onClick="savefield"/>
 
