--- a/app/src/main/res/layout/activity_addition1.xml
+++ b/app/src/main/res/layout/activity_addition1.xml
@@ -10,9 +10,14 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:orientation="vertical"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingTop="0dp"
     tools:context="com.example.sagar.ahs.Addition1">
 
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/linear1">
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="wrap_content"
@@ -22,54 +27,57 @@
         <TextView
 
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
+            android:layout_height="match_parent"
+            android:textColor="#ffff"
             android:id="@+id/textView16"
             android:background="@color/colorPrimary"
-            android:textSize="15sp"
+            android:textSize="13sp"
             android:textStyle="bold"
             android:layout_weight="1" />
 
         <TextView
 
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:paddingStart="10dp"
             android:id="@+id/textView17"
             android:background="@color/colorPrimary"
-            android:textSize="15sp"
+            android:textSize="13sp"
+            android:textColor="#ffff"
             android:textStyle="bold"
             android:layout_weight="1" />
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:id="@+id/textView23"
             android:layout_weight="1"
-            android:textSize="15sp"
+            android:textSize="13sp"
             android:background="@color/colorPrimary"
             android:textStyle="bold"
+            android:textColor="#ffff"
             />
 
         <TextView
             android:text="@string/cropgrown"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:paddingStart="10dp"
             android:id="@+id/textView18"
             android:background="@color/colorPrimary"
-            android:textSize="15sp"
+            android:textSize="13sp"
             android:textStyle="bold"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:textColor="#ffff"/>
 
         <TextView
 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
+            android:textColor="#ffff"
             android:id="@+id/textView19"
             android:background="@color/colorPrimary"
-            android:textSize="15sp"
+            android:textSize="13sp"
             android:textStyle="bold"
             android:layout_weight="1" />
         <TextView
@@ -77,25 +85,26 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:paddingStart="10dp"
-
+            android:textColor="#ffff"
             android:text="@string/DTH"
             android:background="@color/colorPrimary"
-            android:textSize="15sp"
+            android:textSize="13sp"
             android:textStyle="bold"
             android:layout_weight="1" />
-        <TextView
 
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-
-            android:id="@+id/tv122"
-            android:background="@color/colorPrimary"
-            android:textSize="15sp"
-            android:textStyle="bold"
-            android:layout_weight="1" />
     </LinearLayout>
 
+        <TextView
 
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textColor="#ffff"
+            android:id="@+id/tv122"
+            android:background="@color/colorPrimary"
+            android:textSize="13sp"
+            android:textStyle="bold"
+            android:layout_weight="1" />
+</LinearLayout>
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="wrap_content"
@@ -147,9 +156,8 @@
             android:id="@+id/textView20"
             android:layout_weight="1.85"
             android:background="@color/colorAccent"
-            android:textStyle="bold"
             android:gravity="center"
-            />
+            android:elevation="5dp" />
 
         <TextView
             android:text="@string/currentsituaation"
@@ -158,18 +166,20 @@
             android:id="@+id/textView21"
             android:gravity="center"
             android:layout_weight="0.85"
+            android:textColor="#ffff"
             android:background="@color/colorPrimary"
-            android:textStyle="bold"/>
+           />
 
         <TextView
             android:text="@string/procedure"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textView22"
+            android:textColor="#ffff"
             android:gravity="center"
             android:layout_weight="1"
             android:background="@color/colorPrimary"
-            android:textStyle="bold"/>
+            />
     </LinearLayout>
 
 </LinearLayout>
