--- a/app/src/main/res/layout/activity_addition2.xml
+++ b/app/src/main/res/layout/activity_addition2.xml
@@ -8,10 +8,15 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingTop="0dp"
     android:orientation="vertical"
     tools:context="com.example.sagar.ahs.Addition2"
     android:weightSum="1">
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/linear1">
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="wrap_content"
@@ -22,10 +27,10 @@
 
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-
+            android:textColor="#ffff"
             android:id="@+id/textView88"
             android:background="@color/colorPrimary"
-            android:textSize="15sp"
+            android:textSize="13sp"
             android:textStyle="bold"
             android:layout_weight="1" />
 
@@ -34,9 +39,10 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:paddingStart="10dp"
+            android:textColor="#ffff"
             android:id="@+id/textView89"
             android:background="@color/colorPrimary"
-            android:textSize="15sp"
+            android:textSize="13sp"
             android:textStyle="bold"
             android:layout_weight="1" />
         <TextView
@@ -44,7 +50,8 @@
             android:layout_height="match_parent"
             android:id="@+id/textView99"
             android:layout_weight="1"
-            android:textSize="15sp"
+            android:textSize="13sp"
+            android:textColor="#ffff"
             android:background="@color/colorPrimary"
             android:textStyle="bold"
             />
@@ -55,8 +62,9 @@
             android:layout_height="match_parent"
             android:paddingStart="10dp"
             android:id="@+id/textView90"
+            android:textColor="#ffff"
             android:background="@color/colorPrimary"
-            android:textSize="15sp"
+            android:textSize="13sp"
             android:textStyle="bold"
             android:layout_weight="1" />
 
@@ -64,10 +72,10 @@
 
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:paddingStart="10dp"
             android:id="@+id/textView19"
             android:background="@color/colorPrimary"
-            android:textSize="15sp"
+            android:textSize="13sp"
+            android:textColor="#ffff"
             android:textStyle="bold"
             android:layout_weight="1" />
         <TextView
@@ -77,21 +85,23 @@
             android:paddingStart="10dp"
             android:text="@string/DTH"
             android:background="@color/colorPrimary"
-            android:textSize="15sp"
+            android:textSize="13sp"
             android:textStyle="bold"
+            android:textColor="#ffff"
             android:layout_weight="1" />
+
+    </LinearLayout>
         <TextView
 
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-
+            android:textColor="#ffff"
             android:id="@+id/tv122"
             android:background="@color/colorPrimary"
-            android:textSize="15sp"
+            android:textSize="13sp"
             android:textStyle="bold"
             android:layout_weight="1" />
-    </LinearLayout>
-
+</LinearLayout>
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="wrap_content"
@@ -142,8 +152,9 @@
             android:layout_height="wrap_content"
             android:id="@+id/textView20"
             android:background="@color/colorPrimary"
-            android:textStyle="bold"
-            android:gravity="center"/>
+
+            android:gravity="center"
+            android:textColor="#ffff"/>
 
         <TextView
             android:text="@string/currentsituaation"
@@ -152,7 +163,8 @@
             android:id="@+id/textView21"
             android:gravity="center"
             android:background="@color/colorAccent"
-            android:textStyle="bold"/>
+
+            />
 
         <TextView
             android:text="@string/procedure"
@@ -160,8 +172,9 @@
             android:layout_height="wrap_content"
             android:id="@+id/textView22"
             android:gravity="center"
+            android:textColor="#ffff"
             android:background="@color/colorPrimary"
-            android:textStyle="bold"/>
+            />
     </LinearLayout>
 
 </LinearLayout>
