--- a/app/src/main/res/layout/activity_addition3.xml
+++ b/app/src/main/res/layout/activity_addition3.xml
@@ -7,24 +7,33 @@
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
+
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingTop="0dp"
     android:orientation="vertical"
     tools:context="com.example.sagar.ahs.Addition3">
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/linear1"
+        >
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/linear">
-
+        android:id="@+id/linear"
+        >
+0
         <TextView
 
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-
+            android:textColor="#ffff"
             android:id="@+id/textView50"
             android:background="@color/colorPrimary"
-            android:textSize="15sp"
+            android:textSize="13sp"
             android:textStyle="bold"
             android:layout_weight="1" />
 
@@ -33,9 +42,10 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:paddingStart="10dp"
+            android:textColor="#ffff"
             android:id="@+id/textView51"
             android:background="@color/colorPrimary"
-            android:textSize="15sp"
+            android:textSize="13sp"
             android:textStyle="bold"
             android:layout_weight="1" />
         <TextView
@@ -43,7 +53,8 @@
             android:layout_height="match_parent"
             android:id="@+id/textView55"
             android:layout_weight="1"
-            android:textSize="15sp"
+            android:textSize="13sp"
+            android:textColor="#ffff"
             android:background="@color/colorPrimary"
             android:textStyle="bold"
             />
@@ -52,10 +63,10 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:paddingStart="10dp"
-
+            android:textColor="#ffff"
             android:id="@+id/textView52"
             android:background="@color/colorPrimary"
-            android:textSize="15sp"
+            android:textSize="13sp"
             android:textStyle="bold"
             android:layout_weight="1" />
 
@@ -63,10 +74,10 @@
 
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-
+            android:textColor="#ffff"
             android:id="@+id/textView53"
             android:background="@color/colorPrimary"
-            android:textSize="15sp"
+            android:textSize="13sp"
             android:textStyle="bold"
             android:layout_weight="1" />
         <TextView
@@ -74,25 +85,25 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:paddingStart="10dp"
-
+            android:textColor="#ffff"
             android:text="@string/DTH"
             android:background="@color/colorPrimary"
-            android:textSize="15sp"
+            android:textSize="13sp"
             android:textStyle="bold"
             android:layout_weight="1" />
+
+    </LinearLayout>
         <TextView
 
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-
-        android:id="@+id/tv122"
+            android:textColor="#ffff"
+            android:id="@+id/tv122"
             android:background="@color/colorPrimary"
-            android:textSize="15sp"
+            android:textSize="13sp"
             android:textStyle="bold"
             android:layout_weight="1" />
-    </LinearLayout>
-
-
+</LinearLayout>
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="wrap_content"
@@ -143,8 +154,9 @@
             android:id="@+id/textView20"
             android:layout_weight="1.85"
             android:background="@color/colorPrimary"
-            android:textStyle="bold"
-            android:gravity="center"/>
+
+            android:gravity="center"
+            android:textColor="#ffff"/>
 
         <TextView
             android:text="@string/currentsituaation"
@@ -152,8 +164,9 @@
             android:layout_height="wrap_content"
             android:id="@+id/textView21"
             android:gravity="center"
+            android:textColor="#ffff"
             android:background="@color/colorPrimary"
-            android:textStyle="bold"
+
             android:layout_weight="0.78" />
 
         <TextView
@@ -164,7 +177,7 @@
             android:gravity="center"
             android:layout_weight="1"
             android:background="@color/colorAccent"
-            android:textStyle="bold"/>
+            />
     </LinearLayout>
 
 
