--- a/app/src/main/res/layout/activity_homescreen.xml
+++ b/app/src/main/res/layout/activity_homescreen.xml
@@ -8,7 +8,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingStart="@dimen/activity_horizontal_margin"
     android:paddingEnd="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingTop="0dp"
     android:orientation="vertical"
     tools:context="com.example.sagar.ahs.homescreenjava"
     android:weightSum="1">
@@ -118,7 +118,7 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
 android:divider="@color/colorPrimary"
-        android:dividerHeight="3dp"
+        android:dividerHeight="1dp"
         android:id="@+id/list_view"
 />
 
