--- a/app/src/main/res/layout/activity_addition1__second.xml
+++ b/app/src/main/res/layout/activity_addition1__second.xml
@@ -98,12 +98,12 @@
 
         <TextView
 
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:textColor="#ffff"
             android:id="@+id/tv122"
             android:background="@color/colorPrimary"
-            android:textSize="13sp"
+            android:textSize="12sp"
             android:textStyle="bold"
             android:layout_weight="1" />
     </LinearLayout>
