--- a/app/src/main/res/layout/activity_addition3.xml
+++ b/app/src/main/res/layout/activity_addition3.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/linear"
         >
-0
+
         <TextView
 
             android:layout_width="wrap_content"
@@ -95,12 +95,12 @@
     </LinearLayout>
         <TextView
 
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:textColor="#ffff"
             android:id="@+id/tv122"
             android:background="@color/colorPrimary"
-            android:textSize="13sp"
+            android:textSize="12sp"
             android:textStyle="bold"
             android:layout_weight="1" />
 </LinearLayout>
