Some further laouts added

--- a/app/src/main/res/layout/activity_showuserinfo.xml
+++ b/app/src/main/res/layout/activity_showuserinfo.xml
@@ -92,4 +92,12 @@
         android:textStyle="bold"
         android:gravity="center"/>
 
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="0.36"
+        android:divider="@color/colorPrimary"
+        android:dividerHeight="1dp"
+        android:id="@+id/list_view"/>
+
 </LinearLayout>
