--- a/app/src/main/res/layout/activity_addition2.xml
+++ b/app/src/main/res/layout/activity_addition2.xml
@@ -177,4 +177,125 @@
             />
     </LinearLayout>
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingTop="30dp">
+
+
+        <TextView
+            android:text="@string/Current_Crop"
+            android:background="@color/colorPrimary"
+            android:id="@+id/textView40"
+            android:textStyle="bold"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+
+            android:textSize="16sp"
+            android:textColor="#ffff"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:gravity="center"/>
+
+        <TextView
+
+            android:textStyle="bold"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:gravity="center"
+            android:textSize="16sp"
+            android:id="@+id/textView42"
+            android:layout_alignParentTop="true"
+            android:layout_toEndOf="@+id/textView40" />
+
+        <TextView
+
+            android:textStyle="bold"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:gravity="center"
+            android:textSize="16sp"
+            android:layout_alignTop="@+id/textView38"
+            android:layout_toEndOf="@+id/textView38"
+            android:id="@+id/textView43" />
+
+        <TextView
+
+            android:textStyle="bold"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:gravity="center"
+            android:textSize="16sp"
+            android:id="@+id/textView44"
+            android:layout_alignTop="@+id/textView39"
+            android:layout_toEndOf="@+id/textView39" />
+
+        <TextView
+
+            android:textStyle="bold"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:gravity="center"
+            android:textSize="16sp"
+            android:layout_alignTop="@+id/textView41"
+            android:layout_toEndOf="@+id/textView41"
+            android:id="@+id/textView45" />
+
+        <TextView
+            android:text="@string/SideCrop"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:id="@+id/textView38"
+            android:textStyle="bold"
+            android:background="@color/colorPrimary"
+            android:textSize="16sp"
+            android:textColor="#ffff"
+            android:gravity="center"
+            android:layout_below="@+id/textView40"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="25dp" />
+
+        <TextView
+            android:text="@string/PlantedDate"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:id="@+id/textView39"
+            android:textStyle="bold"
+            android:background="@color/colorPrimary"
+            android:textSize="16sp"
+            android:textColor="#ffff"
+            android:gravity="center"
+            android:layout_below="@+id/textView43"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="23dp" />
+
+        <TextView
+            android:text="@string/Expected_Harvest_Date"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:id="@+id/textView41"
+            android:textStyle="bold"
+            android:background="@color/colorPrimary"
+            android:textSize="16sp"
+            android:textColor="#ffff"
+            android:layout_marginTop="26dp"
+            android:gravity="center"
+            android:layout_below="@+id/textView44"
+            android:layout_alignParentStart="true" />
+
+        <TextView
+            android:text="@string/Error_Message"
+            android:gravity="center"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:id="@+id/textView37"
+            android:layout_below="@+id/textView43"
+            android:layout_alignParentStart="true"
+            android:textStyle="italic"
+            android:background="@color/colorPrimary"
+            android:textSize="15sp"
+            android:textColor="#ffff"/>
+    </RelativeLayout>
+
+
 </LinearLayout>
