--- a/app/src/main/res/layout/activity_info_display.xml
+++ b/app/src/main/res/layout/activity_info_display.xml
@@ -17,6 +17,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/textView48"
         android:textStyle="bold"
-        android:textSize="15sp"/>
+        android:textSize="15sp"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"/>
 
 </ScrollView>
